# NewEvolveo3pro

./: .env.example  .env.save  .gitignore  AGENT.md  CELL_LEVEL_HEALTH_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  cli.py  cli_clean.py  confidence_explained.md  debug_extraction.py  debug_google_output.py  docai_extract.py  extraction_quality_dashboard.py  extractor_comparison_results.md  generate_all_outputs.py  generate_google_outputs.py  google_processors_comparison.md  health_diagnostic.py  pdf_extract.py  prepare_ml_training.py  processor_types_guide.md  pyproject.toml  raw_description_assessment.py  requirements.txt  serp_search.py  setup_docai_env.sh  setup_google_docai.sh  simple_output_generator.py  simple_test.py  smoke_test.py  stress_extract.py  test_extraction_alignment.py  test_extractors.py  test_google_only.py  test_phase2.py  test_robust.py  train_ml_models.py
.github/workflows/: ci.yml
10extractors/: COMPREHENSIVE_EXTRACTION_REPORT.md  SUMMARY_20250618_115554.md  SUMMARY_20250618_120059.txt  SUMMARY_20250618_144707.md
10extractors/01-pdfplumber/text/: Itau_2024-10.txt  extraction_20250618_115522.txt  extraction_20250618_144634.txt
10extractors/02-camelot/text/: camelot_summary.txt  extraction_20250618_115529.txt  extraction_20250618_144638.txt
10extractors/03-aws-textract/text/: aws_textract_summary.txt  extraction_20250618_115546.txt  extraction_20250618_144700.txt
10extractors/04-azure-docintel/text/: azure_docintel_summary.txt  extraction_20250618_115554.txt  extraction_20250618_144707.txt
10extractors/05-google-ocr/text/: Itau_2024-10.txt  extraction_20250618_115554.txt  extraction_20250618_144707.txt
10extractors/06-google-form/text/: Itau_2024-10.txt  extraction_20250618_115554.txt  extraction_20250618_144707.txt
10extractors/07-google-layout/text/: Itau_2024-10.txt  extraction_20250618_115554.txt  extraction_20250618_144707.txt
10extractors/08-google-invoice/text/: Itau_2024-10.txt  extraction_20250618_115554.txt  extraction_20250618_144707.txt
10extractors/09-google-custom/text/: Itau_2024-10.txt  extraction_20250618_115554.txt  extraction_20250618_144707.txt
10extractors/10-regex-fallback/text/: extraction_20250618_115554.txt  extraction_20250618_144707.txt  regex_fallback_summary.txt
10outputs/azure/text/: Itau_2024-10.txt  Itau_2024-11.txt  Itau_2024-12.txt  Itau_2025-01.txt  Itau_2025-03.txt  Itau_2025-04.txt  Itau_2025-05.txt  itau_2025-06.txt
10outputs/camelot/text/: Itau_2024-10.txt  Itau_2024-11.txt  Itau_2024-12.txt  Itau_2025-01.txt  Itau_2025-03.txt  Itau_2025-04.txt  Itau_2025-05.txt  itau_2025-06.txt
10outputs/pdfplumber/text/: Itau_2024-10.txt  Itau_2024-11.txt  Itau_2024-12.txt  Itau_2025-01.txt  Itau_2025-03.txt  Itau_2025-04.txt  Itau_2025-05.txt  itau_2025-06.txt
10outputs/textract/text/: Itau_2024-10.txt  Itau_2024-11.txt  Itau_2024-12.txt  Itau_2025-01.txt  Itau_2025-03.txt  Itau_2025-04.txt  Itau_2025-05.txt  itau_2025-06.txt
4outputs/azure/text/: Itau_2024-10.txt  Itau_2024-11.txt  Itau_2024-12.txt  Itau_2025-01.txt  Itau_2025-03.txt  Itau_2025-04.txt  Itau_2025-05.txt  itau_2025-06.txt
core/: dispatcher.py  metrics.py  normalizer.py  robust.py
data/: golden_auto.yml
data/golden/: golden_2024-10.csv  golden_2025-05.csv
examples/: combined_extract.py  pdf_extract.py
flows/: stress_extract.py
infra/: Dockerfile  docker-compose.yml  grafana-dashboard.json
models/: category_classifier.joblib  fx_predictor.joblib
rpm/: setup.sh
scratch/: .gitkeep
scripts/: auto_golden_pr.py
src/: __init__.py  cli.py
src/classifiers/: row_classifier.py
src/core/: __init__.py  confidence.py  metrics.py  models.py  normalise.py  patterns.py  regex_catalogue.py
src/enrichment/: __init__.py  fx_parser.py  iof_calculator.py  metadata_enricher.py  ml_enricher.py  pdf_validator.py  pipeline.py  template_matcher.py
src/extractors/: __init__.py  azure_extractor.py  base_extractor.py  camelot_extractor.py  google_docai_mock.py  google_extractor.py  itau_patterns.py  pdfplumber_extractor.py  textract_extractor.py
src/merge/: cluster_fuzzy.py
src/merger/: __init__.py  ensemble_merger.py
src/ml/: __init__.py  training_data_prep.py
src/postprocessors/: __init__.py  google_table_parser.py
src/utils/: csv_helpers.py  fallback_extract.py  row_builder.py
src/validators/: __init__.py  cell_accuracy_analyzer.py  cell_level_diff.py  golden_validator.py  semantic_compare.py
tests/: conftest.py  test_core.py  test_extractors_against_golden.py
tests/synth/: pdf_generator.py
tools/: analyze_extraction_errors.py  batch_extract_and_save.py  generate_dashboard.py  golden_editor.py  ml_enrich_and_compare.py  run_full_pipeline.py  train_category_classifier.py  train_multioutput_classifier.py
(+30 files in other folders)
